--- a/Mango.GatewaySolution/Mango.GatewaySolution.csproj
+++ b/Mango.GatewaySolution/Mango.GatewaySolution.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="6.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
+    <PackageReference Include="Ocelot" Version="23.0.0" />
+  </ItemGroup>
+
 </Project>
